<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/llTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculadora_salario_neto"
            android:textSize="28sp"
            android:textColor="@color/black"
            />

    </LinearLayout>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cvSalario"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@+id/llTitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvPagas"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintVertical_bias="0.07"
        app:cardBackgroundColor="@color/verde1">
        
        <LinearLayout
            android:id="@+id/llSalarioBruto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salario"/>

            <EditText
                android:id="@+id/etSalario"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/escriba_su_salario"
                android:textSize="12sp"/>

        </LinearLayout>

        
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPagas"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toEndOf="@id/cvSalario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llTitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="16dp"
        app:layout_constraintVertical_bias="0.07"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/verde1">

        <LinearLayout
            android:id="@+id/llPagas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_pagas"/>

            <EditText
                android:id="@+id/etPagas"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/escriba_su_n_de_pagas"
                android:textSize="12sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEdad"
        android:layout_width="0dp"
        android:layout_height="140dp"
        app:layout_constraintTop_toBottomOf="@id/cvSalario"
        app:layout_constraintEnd_toStartOf="@id/cvGrupoPro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/verde2">

        <LinearLayout
            android:id="@+id/llEdad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad"/>

            <TextView
                android:id="@+id/tvEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="25"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMenosEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_arrow_downward_24"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMasEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_add_24"
                    />

            </LinearLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvGrupoPro"
        android:layout_width="0dp"
        android:layout_height="140dp"
        app:layout_constraintTop_toBottomOf="@id/cvSalario"
        app:layout_constraintStart_toEndOf="@id/cvEdad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvHijos"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/verde2">

        <LinearLayout
            android:id="@+id/llGrupoPro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grupo_profesional"/>

            <TextView
                android:id="@+id/tvGrupoPro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnRestarGrupo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_arrow_downward_24"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSumarGrupo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_add_24"
                    />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHijos"
        android:layout_width="0dp"
        android:layout_height="140dp"
        app:layout_constraintStart_toEndOf="@id/cvGrupoPro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvSalario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/verde2">

        <LinearLayout
            android:id="@+id/llHijos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_hijos"/>

            <TextView
                android:id="@+id/tvHijos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMenosHijos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_arrow_downward_24"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMasHijos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_add_24"
                    />

            </LinearLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEstado"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvDiscap"
        app:layout_constraintTop_toBottomOf="@+id/cvEdad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.17"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/verde3">

        <LinearLayout
            android:id="@+id/llEstado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado_civil"/>

            <EditText
                android:id="@+id/etEstado"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/escriba_su_estado_civil"
                android:textSize="12sp"/>

        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDiscap"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toEndOf="@id/cvEstado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvHijos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.17"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/verde3">

        <LinearLayout
            android:id="@+id/llDiscap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Discapacidad"/>

            <EditText
                android:id="@+id/etDiscap"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/padece_alguna_discapacidad"
                android:textSize="10sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvEstado"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintVertical_bias="0.68"
        android:text="@string/calcular_salario_neto"
        android:textSize="18sp">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>